# torrechess

./: LICENSE  README.md  pyproject.toml  setup.py
data/legal_moves/: .gitignore  legal_moves_dataset_gen.py
data/lichess_dataset/: .gitignore  download_lichess_engine_archive.ps1  lichess_dataset_prep.ipynb
pocs/supervised_learning_legal_moves/: supervised_learning_legal_moves.ipynb
tests/: _nn_29_1858_v0.pth  chess_bitboards.ipynb  heuristic_engines.ipynb  neural_engines.ipynb
tests/test_pip_install_local/: create_new_venv_install_torrechess.ps1  pip_uninstall_install_torrechess.ps1  test.ipynb
torrechess/: heuristic_engines.py  neural_engines.py  utils.py
torrechess/core/: __init__.cpp  __init__.pyx
