[build-system]
requires = ["setuptools", "wheel", "Cython"]
#build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["torrechess"]

[project]
name = "torrechess"
version = "0.0.6"
authors = [
  { name="Riccardo Torreggiani", email="riccardo.torreggiani@gmail.com" },
]
description = "Playing around with neural networks and funny chess engines."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rktr1998/torrechess"
Issues = "https://github.com/rktr1998/torrechess/issues"
